new proj/src/objects/GE_Profile__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Used to keep mapping for Profile Name and SFDC ID</description>
    <fields>
        <fullName>Functional_Profile_Name__c</fullName>
        <label>Functional Profile Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSetBasedProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PermissionSetBasedProfile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <label>Permission Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <externalId>true</externalId>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_SFDC_ID__c</fullName>
        <label>Profile SFDC ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>GE_Profile</label>
</CustomObject>